Added admin views, question list view

--- a/backend/config/alembic.ini
+++ b/backend/config/alembic.ini
@@ -2,7 +2,8 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic
+;script_location = alembic
+script_location = ./backend/services/database/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -58,7 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/tg_bot
 
 
 [post_write_hooks]
