--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 aiohttp==3.8.4
 aio-pika==9.0.5
+aiohttp_apispec==2.2.3
+aiohttp_session==2.12.0
 alembic==1.10.2
+asyncpg==0.27.0
 black==23.1.0
+cryptography==40.0.1
 PyYAML==6.0
 sqlalchemy==2.0.7
+marshmallow~=3.19.0
